--- a/index.css
+++ b/index.css
@@ -16,8 +16,33 @@
 
 .atm-container {
     display: inline-block;
-    width: calc(50% - 2px);
-    border: 1px solid #aaa;
+    position: relative;
+    margin-bottom: 2rem;
+/*
+    width: 48%;
+    padding: 1rem 0;
+*/
+}
+.atm-container:nth-child(odd) {
+/*
+    padding-right: 2%;
+*/
+}
+.atm-container:nth-child(even) {
+/*
+    padding-left: 2%;
+*/
+}
+
+.atm-legend {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.atm-svg-container {
+    display: inline-block;
 }
 
 .atm-axis path,
