got a demo baby

--- a/index.css
+++ b/index.css
@@ -92,8 +92,11 @@
 .atm-legend {
     position: absolute;
     top: 0;
+    right: 30px;
+    /*
     left: 50%;
     transform: translateX(-50%);
+    */
 }
 
 .atm-header {
