--- a/index.css
+++ b/index.css
@@ -12,46 +12,87 @@
 .atm-main > * {
 }
 
-/* controls */
+/** controls **/
 
 .atm-controls {
-    width: 100%;
-    margin-bottom: 1rem;
+    width: calc(24% - 40px);
+    float: left;
+    min-height: 20px;
+    padding: 19px;
+    margin-bottom: 20px;
+    background-color: #f5f5f5;
+    border: 1px solid #e3e3e3;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
 }
-.atm-controls div {
+.atm-controls > * {
+    width: 100%;
     display: inline-block;
-    margin-right: 8px;
+}
+.atm-controls > * > * {
+    display: inline-block;
+}
+.atm-controls-spacing {
+    padding-bottom: 10px;
+    border-bottom: 1px solid #aaa;
+    margin-bottom: 10px;
+}
+
+/*** timepoint ***/
+
+.atm-timepoint {
+    text-shadow: black 0px 0px 10px;
+    font-weight: lighter;
+    font-size: 2rem;
+    text-align: center;
+}
+
+/*** animation ***/
+
+.atm-animation {
+    display: flex;
+    justify-content: space-evenly;
 }
 .atm-button {
     min-width: 64px;
     padding: 4px 8px;
+    margin: 0px 4px;
     cursor: pointer;
+    background: #337ab7;
+    color: white;
+    font-weight: bold;
+    border-color: #8c8c8c;
+    border-radius: 4px;
 }
 .atm-button.atm-active {
     font-weight: bold;
     color: green;
 }
 
-.atm-timepoint {
-    border-radius: 5px;
-    font-size: 1.75rem;
+/*** filter ***/
+
+.atm-filters {
+}
+.atm-filters__header {
     text-shadow: black 0px 0px 10px;
-    font-weight: 600;
-    text-align: center;
     font-weight: lighter;
     font-size: 2rem;
-    position: absolute;
     text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    left: 0;
-    right: 0;
-    overflow: auto;
-    z-index: -1;
+    width: 100%;
+}
+.atm-select {
+    width: 100%;
 }
 
-/* time series */
+/*** footnotes ***/
 
+/** time series **/
+
+.atm-charts {
+    width: 75%;
+    float: right;
+}
 .atm-container {
     width: 50%;
     display: inline-block;
