--- a/index.css
+++ b/index.css
@@ -59,11 +59,11 @@
     padding: 4px 8px;
     margin: 0px 4px;
     cursor: pointer;
-    background: #337ab7;
-    color: white;
-    font-weight: bold;
+    color: #fff;
+    background-color: #5897fb;
     border-color: #8c8c8c;
     border-radius: 4px;
+    font-size: 16px;
 }
 .atm-button.atm-active {
     font-weight: bold;
