add htmlwidgets scaffolding for use in R

--- a/index.css
+++ b/index.css
@@ -128,7 +128,7 @@
 .atm-legend-item__symbol {
     display: inline-block;
     height: 10px;
-    margin-right: .5em;
+    margin-right: 0.5em;
     width: 10px;
 }
 
